ssi-pagespeed-rewrite/k8s-deploy/main-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-deploy
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: main
  name: main
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: main
    spec:
      containers:
      - image: dalongrong/ssi-pagespeed-main
        name: main
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
