ssi-pagespeed-rewrite/k8s-deploy/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-deploy
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: main
  name: main
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 80
  selector:
    io.kompose.service: main
status:
  loadBalancer: {}
