ssi-pagespeed-rewrite/k8s-deploy/web1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-deploy
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web1
  name: web1
spec:
  ports:
  - name: "8180"
    port: 8180
    targetPort: 80
  selector:
    io.kompose.service: web1
status:
  loadBalancer: {}
