ssi-pagespeed-rewrite/k8s-deploy/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s-deploy
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: web2
  name: web2
spec:
  ports:
  - name: "8181"
    port: 8181
    targetPort: 80
  selector:
    io.kompose.service: web2
status:
  loadBalancer: {}
